--- a/wio.yml
+++ b/wio.yml
@@ -18,6 +18,7 @@ pkg:
   - ALL
   board:
   - ALL
+  - uno
   compile_flags: []
   ide: none
 
@@ -32,4 +33,6 @@ dependencies:
   wlib-wio:
     version: latest
     vendor: false
-    compile_flags: []
+    compile_flags:
+    - -DMAX_ALLOCATORS=10u
+    - -DNUM_BLOCKS=400u
