Added unit testing framework and json_element tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 set(WLIB_DIR ${CMAKE_CURRENT_LIST_DIR}/.wio/node_modules/wlib-wio)
 set(JSON_DIR ${CMAKE_CURRENT_LIST_DIR})
+set(GTEST_DIR ${CMAKE_CURRENT_LIST_DIR}/googletest/googletest)
 
 file(GLOB_RECURSE WLIB_FILES
     ${WLIB_DIR}/include/wlib/**/*.h
@@ -22,14 +23,21 @@ file(GLOB_RECURSE JSON_FILES
 
 add_library(json ${JSON_FILES})
 target_link_libraries(json wlib)
-target_include_directories(json PUBLIC ${JSON_DIR}/include)
-target_include_directories(json PUBLIC ${WLIB_DIR}/include)
+target_include_directories(json PUBLIC 
+    ${JSON_DIR}/include
+    ${WLIB_DIR}/include
+    )
+
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/googletest)
 
 file(GLOB_RECURSE UNIT_FILES
     ${CMAKE_CURRENT_LIST_DIR}/unit/*.cpp
     )
 
 add_executable(unit ${UNIT_FILES})
-target_link_libraries(unit json wlib)
-target_include_directories(unit PUBLIC ${WLIB_DIR}/include)
-target_include_directories(unit PUBLIC ${JSON_DIR}/include)
+target_link_libraries(unit json wlib gtest)
+target_include_directories(unit PUBLIC 
+    ${WLIB_DIR}/include
+    ${JSON_DIR}/include
+    ${GTEST_DIR}/include   
+    )
