--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,14 @@ sudo: require
 language: cpp
 compiler: g++
 
-install:
-  - sudo apt install cmake
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-5
+      - g++-5
+      - cmake
 
 script:
   - gcc -v
