--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ ehthumbs.db
 Thumbs.db
 
 # Windows
-Thumbs.db
-ehthumbs.db
 ehthumbs_vista.db
 [Dd]esktop.ini
 
@@ -42,4 +40,7 @@ ehthumbs_vista.db
 
 # Unit Tests
 cmake-build-debug/
+.idea/
 
+# vim
+*.swp
