--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,16 @@ addons:
       - g++-5
       - cmake
 
+install:
+  - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+  - sudo apt-get install -y nodejs
+  - sudo npm install -g wio --unsafe-perm
+
 script:
   - gcc -v
   - g++ -v
   - cmake --version
+  - wio update pkg .
+  - wio pac get
   - ./wmake test
 
