--- a/wio.yml
+++ b/wio.yml
@@ -1,9 +1,9 @@
 pkg:
   name: wlib-json
   description: JSON library for wio
-  repository: ""
+  repository: "https://github.com/waterloop/wlib-json.git"
   version: 1.0.0
-  author: Jeff Niu
+  author: "Jeff Niu <jeffniu22@gmail.com> (https://github.com/mogball)"
   contributors: []
   organization: Waterloop
   keywords:
