--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
   - sudo apt-get install -y nodejs
   - sudo npm install -g wio --unsafe-perm
+  - sudo apt-get install -qq gcc-avr avr-libc avrdude -y
 
 script:
   - gcc -v
