--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 install:
   - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
   - sudo apt-get install -y nodejs
-  - sudo npm install -g wio --unsafe-perm
+  - sudo npm install -g wio@0.2.1 --unsafe-perm
   - sudo apt-get install -qq gcc-avr avr-libc avrdude -y
 
 script:
