Fixing generic include, adding more travis (#26)
* Fixing generic include, adding more travis

* moved json import first

* Update .travis.yml

* reverting to wio 0.2.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,13 @@ addons:
       - gcc-5
       - g++-5
       - cmake
+      - valgrind
 
 install:
   - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
   - sudo apt-get install -y nodejs
-  - sudo npm install -g wio --unsafe-perm
+  - sudo npm install -g wio@0.2.1 --unsafe-perm
+  - sudo apt-get install -qq gcc-avr avr-libc avrdude -y
 
 script:
   - gcc -v
@@ -25,4 +27,8 @@ script:
   - wio update pkg .
   - wio pac get
   - ./wmake test
+  - cd cmake-build-debug
+  - valgrind --leak-check=yes ./unit
+  - cd ..
+  - wio build
 
