--- a/wio.yml
+++ b/wio.yml
@@ -2,7 +2,7 @@ pkg:
   name: wlib-json
   description: JSON library for wio
   repository: https://github.com/waterloop/wlib-json.git
-  version: 1.0.3
+  version: 1.0.4
   author: Jeff Niu <jeffniu22@gmail.com> (https://github.com/mogball)
   contributors: []
   organization: Waterloop
@@ -12,6 +12,7 @@ pkg:
   - c++
   - json
   - waterloop
+  - embedded
   license: MIT
   header_only: false
   platform: ALL
